--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 							</ul>
 						</header>
 						<div class="content">
-							<span class="image fill" data-position="center"><img src="images/pic01.jpg" alt="" /></span>
+							<span class="image fill" data-position="center"><img src="images/case/case7.jpg" alt="" /></span>
 						</div>
 					</section>
 
@@ -58,7 +58,7 @@
 						</header>
 						<div class="content">
 							<p><strong>BlueTape</strong> is a bluetooth enabled smart measuring tape that pairs with a companion app which identifies the user’s correct clothing size in a desired brand to facilitate the online shopping experience.</p>
-							<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+							<span class="image main"><img src="images/case/case6.jpg" alt="" /></span>
 							</div>
 					</section>
 
@@ -67,8 +67,8 @@
 							<h2>See it in Action</h2>
 						</header>
 						<div class="content">
-							<p>Talk about how it works, introduce video to be put below.</p>
-							<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+							<p>Talk about how it works, introduce video to be put below. [1]</p>
+							<iframe width="560" height="315" src="https://www.youtube.com/embed/y7XZQNR88EY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 						</div>
 					</section>
 
@@ -85,10 +85,10 @@
 										<h3>The Case</h3>
 									</header>
 									<div class="content">
-										<p>Designed in TinkerCAD, the case was 3D printed which allows for a perfect fit for the internals at a very low cost [1].</p>
+										<p>Designed in TinkerCAD, the case was 3D printed which allows for a perfect fit for the internals at a very low cost [2].</p>
 										<div class="gallery">
 											<a href="images/cad/case1.jpg" class="landscape"><img src="images/cad/case1.jpg" alt="" /></a>
-											<a href="images/case/casep1.jpg" class="landscape"><img src="images/case/casep1.jpg" alt="" /></a>
+											<a href="images/case/case3.jpg" class="landscape"><img src="images/case/case3.jpg" alt="" /></a>
 										</div>
 									</div>
 								</section>
@@ -98,23 +98,22 @@
 										<h3>The Hardware</h3>
 									</header>
 									<div class="content">
-										<p>Consisting of a Raspberry Pi Zero, a sensor, a battery, a guide wheel, and a measuring tape; the internal hardware were...</p>
+										<p>Consisting of a Raspberry Pi Zero W, a sensor, a battery, a guide wheel, and a measuring tape; the internal hardware were...</p>
 										<div class="gallery">
-											<a href="images/gallery/fulls/05.jpg" class="landscape"><img src="images/gallery/thumbs/05.jpg" alt="" /></a>
-											<p>Raspberry Pi Zero</p>
+											<a href="images/internals/raspberrypi.jpg" class="landscape"><img src="images/internals/raspberrypi.jpg" alt="" /></a>
+											<p>Raspberry Pi Zero W [3]</p>
 										</div>
 										<div class="gallery">
-											<a href="images/gallery/fulls/06.jpg"><img src="images/gallery/thumbs/06.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/07.jpg"><img src="images/gallery/thumbs/07.jpg" alt="" /></a>
+											<a href="images/cad/wheel1.jpg"><img src="images/cad/wheel1.jpg" alt="" /></a>
+											<a href="images/internals/wheel2.jpg"><img src="images/internals/wheel2.jpg" alt="" /></a>
 											<p>Sensor & Guide Wheel</p>
 										</div>
 										<div class="gallery">
-											<a href="images/gallery/fulls/05.jpg" class="landscape"><img src="images/gallery/thumbs/05.jpg" alt="" /></a>
+											<a href="images/internals/tape.jpg" class="landscape"><img src="images/internals/tape.jpg" alt="" /></a>
 											<p>Measuring Tape</p>
 										</div>
 										<div class="gallery">
-											<a href="images/gallery/fulls/06.jpg"><img src="images/gallery/thumbs/06.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/07.jpg"><img src="images/gallery/thumbs/07.jpg" alt="" /></a>
+											<a href="images/case/case5.jpg" class="landscape"><img src="images/case/case5.jpg" alt="" /></a>
 											<p>LCD</p>
 										</div>
 									</div>
@@ -126,10 +125,10 @@
 									</header>
 
 									<div class="content">
-										<p>Created using the Flutter framework, the BlueTape app allows a user to find their perfect size in any brand in the BlueTape database according to their measurements and preferred clothing fit [2].</p>
+										<p>Created using the Flutter framework, the BlueTape app allows a user to find their perfect size in any brand in the BlueTape database according to their measurements and preferred clothing fit [4].</p>
 										<div class="gallery">
 											<a href="images/app/bluetooth.jpg" class="portrait"><img src="images/app/bluetooth.jpg" alt="" /></a>
-											<a href="images/app/preference.jpg" class="portrait"><img src="images/app/preference.jpg" alt="" /></a>
+											<a href="images/app/preference2.jpg" class="portrait"><img src="images/app/preference2.jpg" alt="" /></a>
 										</div>
 										<p>In the future, we plan on improving the app's aesthetics and adding functionality which will further simplify the online shopping experience.</p>
 										<div class="gallery">
@@ -144,7 +143,7 @@
 										<h3>The Database</h3>
 									</header>
 									<div class="content">
-										<p>Currently containing the sizing for 51 brands, the database is implemented using SQLite which facilitates the addition of funtionality such as support for multiple users, more clothing types, and the ability to add user submitted brand data [3].</p>
+										<p>Currently containing the sizing for 51 brands, the database is implemented using SQLite which facilitates the addition of funtionality such as support for multiple users, more clothing types, and the ability to add user submitted brand data [5].</p>
 									</div>
 								</section>
 
@@ -156,8 +155,7 @@
 							<h2>The Project</h2>
 						</header>
 						<div class="content">
-							<p>Talk about the course and the project and the point of the website. Include pretty images below. [4]</p>
-							<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+							<p>Talk about the course and the project and the point of the website.[6] Talk about website. [7][8]</p>
 						</div>
 					</section>
 
@@ -188,10 +186,12 @@
 							<h2>References</h2>
 						</header>
 						<div class="content">
-							<p> [1] 	"TinkerCAD", tinkercad.com, 2019. [Online]. Available: https://www.tinkercad.com/. [Accessed: 1-Aug- 2019].</p>
-							<p> [2] 	"Flutter", flutter.dev, 2019. [Online]. Available: https://flutter.dev/. [Accessed: 1-Aug-2019].</p>
-							<p> [3] 	"SQLite", sqlite.org, 2019. [Online]. Available: https://www.sqlite.org/index.html. [Accessed: 1-Aug-2019].</p>
-							<p> [4] 	"SENG 499: Design Project II", uvic.ca, 2019. [Online]. Available: https://web.uvic.ca/calendar2019-09/CDs/SENG/499.html. [Accessed: 1-Aug-2019].</p>
+							<p> [1] 	"BlueTape Demo", youtube.com, 2019. [Online]. Available: https://www.youtube.com/watch?v=y7XZQNR88EY. [Accessed: 1-Aug- 2019].</p>
+							<p> [2] 	"TinkerCAD", tinkercad.com, 2019. [Online]. Available: https://www.tinkercad.com/. [Accessed: 1-Aug- 2019].</p>
+							<p> [3] 	"Raspberry Pi Zero W", raspberrypi.org, 2019. [Online]. Available: https://www.raspberrypi.org/products/raspberry-pi-zero-w/. [Accessed: 1-Aug-2019].</p>
+							<p> [4] 	"Flutter", flutter.dev, 2019. [Online]. Available: https://flutter.dev/. [Accessed: 1-Aug-2019].</p>
+							<p> [5] 	"SQLite", sqlite.org, 2019. [Online]. Available: https://www.sqlite.org/index.html. [Accessed: 1-Aug-2019].</p>
+							<p> [6] 	"SENG 499: Design Project II", uvic.ca, 2019. [Online]. Available: https://web.uvic.ca/calendar2019-09/CDs/SENG/499.html. [Accessed: 1-Aug-2019].</p>
 							<p> [7] 	"HTML5 UP makes spiffy site templates", html5up.net, 2019. [Online]. Available: https://html5up.net/. [Accessed: 21-Jun-2019].</p>
 							<p> [8] 	"Paradigm Shift", html5up.net, 2019. [Online]. Available: https://html5up.net/paradigm-shift. [Accessed: 21-Jun-2019].</p>
 							<!--<p> [6] 	"Paradigm Shift", html5up.net, 2019. [Online]. Available: https://html5up.net/paradigm-shift. [Accessed: 21-Jun-2019].</p>
