just need two pics and a label for the group pic now

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 							<h2>See it in Action</h2>
 						</header>
 						<div class="content">
-							<p>Talk about how it works, introduce video to be put below. [1]</p>
+							<p>Simply connect the device and take your measurements, then choose a brand and your preferred clothing fit and the app will display your perfect size. Watch the 15 second demo video below to see it in action <a href="https://www.youtube.com/watch?v=y7XZQNR88EY">[1]</a>.</p>
 							<iframe width="560" height="315" src="https://www.youtube.com/embed/y7XZQNR88EY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 						</div>
 					</section>
@@ -85,7 +85,7 @@
 										<h3>The Case</h3>
 									</header>
 									<div class="content">
-										<p>Designed in TinkerCAD, the case was 3D printed which allows for a perfect fit for the internals at a very low cost [2].</p>
+										<p>Designed in TinkerCAD, the case was 3D printed which allows for a perfect fit for the internals at a very low cost <a href="https://www.tinkercad.com/">[2]</a>.</p>
 										<div class="gallery">
 											<a href="images/cad/case1.jpg" class="landscape"><img src="images/cad/case1.jpg" alt="" /></a>
 											<a href="images/case/case3.jpg" class="landscape"><img src="images/case/case3.jpg" alt="" /></a>
@@ -98,10 +98,10 @@
 										<h3>The Hardware</h3>
 									</header>
 									<div class="content">
-										<p>Consisting of a Raspberry Pi Zero W, a sensor, a battery, a guide wheel, and a measuring tape; the internal hardware were...</p>
+										<p>Consisting of a Raspberry Pi Zero W, a sensor, a battery, a guide wheel, and a measuring tape; the internal hardware fits into the bordeline-handheld case. With small modifications such as a smaller chip and a more appropriately sized battery, the device could easily be cut down to about half of it's current size.</p>
 										<div class="gallery">
 											<a href="images/internals/raspberrypi.jpg" class="landscape"><img src="images/internals/raspberrypi.jpg" alt="" /></a>
-											<p>Raspberry Pi Zero W [3]</p>
+											<p>Raspberry Pi Zero W <a href="https://www.raspberrypi.org/products/raspberry-pi-zero-w/">[3]</a></p>
 										</div>
 										<div class="gallery">
 											<a href="images/cad/wheel1.jpg"><img src="images/cad/wheel1.jpg" alt="" /></a>
@@ -125,7 +125,7 @@
 									</header>
 
 									<div class="content">
-										<p>Created using the Flutter framework, the BlueTape app allows a user to find their perfect size in any brand in the BlueTape database according to their measurements and preferred clothing fit [4].</p>
+										<p>Created using the Flutter framework, the BlueTape app allows a user to find their perfect size in any brand in the BlueTape database according to their measurements and preferred clothing fit <a href="https://flutter.dev/">[4]</a>.</p>
 										<div class="gallery">
 											<a href="images/app/bluetooth.jpg" class="portrait"><img src="images/app/bluetooth.jpg" alt="" /></a>
 											<a href="images/app/preference2.jpg" class="portrait"><img src="images/app/preference2.jpg" alt="" /></a>
@@ -143,7 +143,7 @@
 										<h3>The Database</h3>
 									</header>
 									<div class="content">
-										<p>Currently containing the sizing for 51 brands, the database is implemented using SQLite which facilitates the addition of funtionality such as support for multiple users, more clothing types, and the ability to add user submitted brand data [5].</p>
+										<p>Currently containing the sizing for 51 brands, the database is implemented using SQLite which facilitates the addition of funtionality such as support for multiple users, more clothing types, and the ability to add user submitted brand data <a href="https://www.sqlite.org/index.html">[5]</a>.</p>
 									</div>
 								</section>
 
@@ -155,7 +155,9 @@
 							<h2>The Project</h2>
 						</header>
 						<div class="content">
-							<p>Talk about the course and the project and the point of the website.[6] Talk about website. [7][8]</p>
+							<p><strong>BlueTape</strong> was created as a project for the Design Project II course, which is a requirement for Engineering students at the University of Victoria <a href="https://web.uvic.ca/calendar2019-09/CDs/SENG/499.html">[6]</a>.
+								In the course, students are required to form teams, decide on a project, and find a faculty member who will supervise their work. As a requirement for the course, this website was made to showcase the project.
+								This website is based off of HTML5 UP's free website template, Paradigm Shift <a href="https://html5up.net/">[7]</a><a href="https://html5up.net/paradigm-shift">[8]</a>.</p>
 						</div>
 					</section>
 
@@ -164,8 +166,9 @@
 							<h2>About The Team</h2>
 						</header>
 						<div class="content">
-							<p>Introduce the team and its members.</p>
+							<p>A group of five engineering students (two being in Electrical Engineering, two in Software Engineering, and one in Computer Engineering), the team chose to work together because of their diverse set of skills. </p>
 							<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+							<p>From the left, we have ______ in ______...</p>
 						</div>
 					</section>
 
@@ -186,14 +189,14 @@
 							<h2>References</h2>
 						</header>
 						<div class="content">
-							<p> [1] 	"BlueTape Demo", youtube.com, 2019. [Online]. Available: https://www.youtube.com/watch?v=y7XZQNR88EY. [Accessed: 1-Aug- 2019].</p>
-							<p> [2] 	"TinkerCAD", tinkercad.com, 2019. [Online]. Available: https://www.tinkercad.com/. [Accessed: 1-Aug- 2019].</p>
-							<p> [3] 	"Raspberry Pi Zero W", raspberrypi.org, 2019. [Online]. Available: https://www.raspberrypi.org/products/raspberry-pi-zero-w/. [Accessed: 1-Aug-2019].</p>
-							<p> [4] 	"Flutter", flutter.dev, 2019. [Online]. Available: https://flutter.dev/. [Accessed: 1-Aug-2019].</p>
-							<p> [5] 	"SQLite", sqlite.org, 2019. [Online]. Available: https://www.sqlite.org/index.html. [Accessed: 1-Aug-2019].</p>
-							<p> [6] 	"SENG 499: Design Project II", uvic.ca, 2019. [Online]. Available: https://web.uvic.ca/calendar2019-09/CDs/SENG/499.html. [Accessed: 1-Aug-2019].</p>
-							<p> [7] 	"HTML5 UP makes spiffy site templates", html5up.net, 2019. [Online]. Available: https://html5up.net/. [Accessed: 21-Jun-2019].</p>
-							<p> [8] 	"Paradigm Shift", html5up.net, 2019. [Online]. Available: https://html5up.net/paradigm-shift. [Accessed: 21-Jun-2019].</p>
+							<p> [1] 	"BlueTape Demo", youtube.com, 2019. [Online]. Available: <a href="https://www.youtube.com/watch?v=y7XZQNR88EY">https://www.youtube.com/watch?v=y7XZQNR88EY</a>. [Accessed: 1-Aug- 2019].</p>
+							<p> [2] 	"TinkerCAD", tinkercad.com, 2019. [Online]. Available: <a href="https://www.tinkercad.com/">https://www.tinkercad.com/</a>. [Accessed: 1-Aug- 2019].</p>
+							<p> [3] 	"Raspberry Pi Zero W", raspberrypi.org, 2019. [Online]. Available: <a href="https://www.raspberrypi.org/products/raspberry-pi-zero-w/">https://www.raspberrypi.org/products/raspberry-pi-zero-w/</a>. [Accessed: 1-Aug-2019].</p>
+							<p> [4] 	"Flutter", flutter.dev, 2019. [Online]. Available: <a href="https://flutter.dev/">https://flutter.dev/</a>. [Accessed: 1-Aug-2019].</p>
+							<p> [5] 	"SQLite", sqlite.org, 2019. [Online]. Available: <a href="https://www.sqlite.org/index.html">https://www.sqlite.org/index.html</a>. [Accessed: 1-Aug-2019].</p>
+							<p> [6] 	"SENG 499: Design Project II", uvic.ca, 2019. [Online]. Available: <a href="https://web.uvic.ca/calendar2019-09/CDs/SENG/499.html">https://web.uvic.ca/calendar2019-09/CDs/SENG/499.html</a>. [Accessed: 1-Aug-2019].</p>
+							<p> [7] 	"HTML5 UP makes spiffy site templates", html5up.net, 2019. [Online]. Available: <a href="https://html5up.net/">https://html5up.net/</a>. [Accessed: 21-Jun-2019].</p>
+							<p> [8] 	"Paradigm Shift", html5up.net, 2019. [Online]. Available: <a href="https://html5up.net/paradigm-shift">https://html5up.net/paradigm-shift</a>. [Accessed: 21-Jun-2019].</p>
 							<!--<p> [6] 	"Paradigm Shift", html5up.net, 2019. [Online]. Available: https://html5up.net/paradigm-shift. [Accessed: 21-Jun-2019].</p>
 							<p> [7] 	"Paradigm Shift", html5up.net, 2019. [Online]. Available: https://html5up.net/paradigm-shift. [Accessed: 21-Jun-2019].</p>
 							<p> [8] 	"Paradigm Shift", html5up.net, 2019. [Online]. Available: https://html5up.net/paradigm-shift. [Accessed: 21-Jun-2019].</p>
