need better title pic and we're done

--- a/index.html
+++ b/index.html
@@ -166,9 +166,15 @@
 							<h2>About The Team</h2>
 						</header>
 						<div class="content">
-							<p>A group of five engineering students (two being in Electrical Engineering, two in Software Engineering, and one in Computer Engineering), the team chose to work together because of their diverse set of skills. </p>
+							<p>A group of five engineering students at the University of Victoria who chose to work together because of their diverse set of skills: </p>
+							<p>- Jesse Bateman, Computer Engineering</p>
+							<p>- Yves Belliveau, Software Engineering</p>
+							<p>- Baraka Lwakila, Software Engineering</p>
+							<p>- Benjamin Stadnik, Electrical Engineering</p>
+							<p>- Erin Wikenheiser, Electrical Engineering</p>
+							<!--<p>A group of five engineering students (two being in Electrical Engineering, two in Software Engineering, and one in Computer Engineering), the team chose to work together because of their diverse set of skills. </p>
 							<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-							<p>From the left, we have ______ in ______...</p>
+							<p>From the left, we have ______ in ______...</p>-->
 						</div>
 					</section>
 
